# libraries

./: .clang-format  .gitignore  CMakeLists.txt
type_containers/: CMakeLists.txt
type_containers/include/randomcat/type_container/: type_list.hpp  type_map.hpp  type_value_map.hpp
units/: CMakeLists.txt
units/include/randomcat/units/: default_units.hpp  derived_units.hpp  quantity.hpp  quantity_cast.hpp  quantity_traits.hpp  unit.hpp  unit_traits.hpp  units.hpp
units/include/randomcat/units/detail/: default_tags.hpp  quantity_compare.hpp  quantity_def.hpp  quantity_fwd.hpp  quantity_math.hpp  quantity_util.hpp  ratio_util.hpp  static_math.hpp  tag_counts.hpp  unit_util.hpp  util.hpp
util/: CMakeLists.txt
util/include/randomcat/util/: optional_filesystem.hpp  require_filesystem.hpp
util/include/randomcat/util/detail/: filesystem_impl.hpp
